fixed footer spacing glitch fixes a few other small html things
git-svn-id: http://webauctionplus.googlecode.com/svn/trunk@359 c41ed8a6-1c15-8a3d-a996-777bd911872f

--- a/www/wa/html/default/main.css
+++ b/www/wa/html/default/main.css
@@ -19,23 +19,16 @@ body {
 }
 
 #footer-push,
-footer,
-footer .container {
+#footer {
 	height: 60px;
 }
-
-footer .container {
-	width: 100%;
+#footer {
+	background-color: #f0f0f0;
 	border-top-width: 1px;
 	border-top-style: solid;
 	border-top-color: #cccccc;
 }
-
-footer .container table {
-	background-color: #f0f0f0;
-}
-
-footer .container table {
+#footer #footer-table {
 	width: 100%;
 	border-width: 0px;
 }
